welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not found: value isFacingTrainl
       if (isFacingTrainl(c)){
           ^